syntax = "proto3";

package common.channel;
option go_package = "github.com/sonr-io/core/common/channel";

enum EventType {
    EVENT_TYPE_UNSPECIFIED = 0;
    EVENT_TYPE_GET = 1;
    EVENT_TYPE_SET = 2;
    EVENT_TYPE_DELETE = 3;
    EVENT_TYPE_PUSH = 4;
    EVENT_TYPE_SYNC = 5;
    EVENT_TYPE_CREATE = 6;
    EVENT_TYPE_INVITE = 7;
    EVENT_TYPE_JOIN = 8;
    EVENT_TYPE_LEAVE = 9;
}

message Event {
    string creator = 1;
    EventType type = 2;
    StoreEntry entry = 3;
    Store store = 4;
}

message Store {
    map<string, StoreEntry> data = 1;
    int32 capacity = 2;
    int64 modified = 3;
    int64 ttl = 4;
}

message StoreEntry {
    string creator = 1;
    string key = 2;
    bytes value = 3;
    int64 expiration = 4;
    int64 created = 5;
    int64 modified = 6;
}
